--- a/homework_1/index.html
+++ b/homework_1/index.html
@@ -10,7 +10,7 @@
     <header class="header">
         <nav class="nav-header">
             <ul class="header-menu">
-                <li class="menu-item"><a href="#">lifestyle</li>
+                <li class="menu-item"><a href="#">lifestyle</a></li>
                 <li class="menu-item"><a href="#">photodiary</a></li>
                 <li class="menu-item"><a href="#">usic</a></li>
                 <li class="menu-item"><a href="#">travel</a></li>
