--- a/homework_4/index.html
+++ b/homework_4/index.html
@@ -111,7 +111,9 @@
                 </section>
             </main>
             <footer class="footer">
-                <p class="footer-info">all rights reserved &#169; dokan | designed <a href="#">themenGraph</a></p>
+                <p class="footer-info">all rights reserved &#169; dokan | designed<span><a href="#" style="font-family: 'OpenSans', sans-serif;
+                    font-size: 16px;
+                    color: #46bfa9;" >ThemenGraph</a></span></p>
             </footer>
             
 
