--- a/homework_5/index.html
+++ b/homework_5/index.html
@@ -5,8 +5,113 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:400,700|Roboto:300i,400" rel="stylesheet">
 </head>
 <body>
+    <header class="header">
+    <div class="header-flex">   
+        <h1 class="header_logo"><a class=logo_link href="#">MoGo</a></h1>
+        <ul class="header-nav">
+            <li class="header-nav-menu"><a class="menu_link" href="#">about</a></li>
+            <li class="header-nav-menu"><a class="menu_link" href="#">service</a></li>
+            <li class="header-nav-menu"><a class="menu_link" href="#">work</a></li>
+            <li class="header-nav-menu"><a class="menu_link" href="#">blog</a></li>
+            <li class="header-nav-menu"><a class="menu_link" href="#">contact</a></li>
+        </ul>
+    </div>    
+    </header>
+    <main class="main">
+        <section class="services">
+        <div class="services_title_conteiner">
+            <h2 class="main_title">We work with</h2>
+            <h3 class="main_title2">amazing services</h3>
+        </div>
+        <ul class="main_nav">
+            <li class="main_nav_item clock">
+                <p class="item_name main_pad_1">photography</p>
+                <p class="item_desc main_pad_2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+            </li>
+            <li class="main_nav_item line">
+                <p class="item_name main_pad_1">web design</p>
+                <p class="item_desc main_pad_2">Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+            </li>
+            <li class="main_nav_item comp">
+                <p class="item_name main_pad_1">creativity</p>
+                <p class="item_desc main_pad_2">Dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+            </li>
+            <li class="main_nav_item book">
+                <p class="item_name main_pad_1">seo</p>
+                <p class="item_desc main_pad_2">Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
+            </li>
+            <li class="main_nav_item house">
+                <p class="item_name main_pad_1">css/html</p>
+                <p class="item_desc main_pad_2">Lorem dolor sit amet, consectetur adipiscing elit, sed do tempor.</p>
+            </li>
+            <li class="main_nav_item board">
+                <p class="item_name main_pad_1">digital</p>
+                <p class="item_desc main_pad_2">Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+            </li>
+        </ul>
+        </section>
+        <section class="about_us">
+            <div class="about_us_title_conteiner">
+                <h2 class="main_title">who we are</h2>
+                <h3 class="main_title2">meet our team</h3>
+            </div>
+            <p class="about_us_par">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+            <ul class="who">
+                <li class="who_menu">
+                    <div class="img_conteiner">
+                        <img src="./img/Layer 16@1X.png" alt="img" class="who_img">
+                        <ul class="submenu_menu">
+                                    <li class="submenu_menu_item"><img class="social" src="./img/facebook@4X.png" alt="img"></li>
+                                    <li class="submenu_menu_item"><img class="social" src="./img/twitter@4X.png" alt="img"></li>
+                                    <li class="submenu_menu_item"><img class="social" src="./img/pinterest@4X.png" alt="img"></li>
+                                    <li class="submenu_menu_item"><img class="social" src="./img/instagram@4X.png" alt="img"></li>
+                        </ul>
+                    </div>
+                    <p class="who_name">matthew dix</p>
+                    <p class="who_work">Graphic Design</p>
+                </li>
+                <li class="who_menu">
+                    <div class="img_conteiner">
+                        <img src="./img/Layer 19@4X.png" alt="img" class="who_img">
+                        <ul class="submenu_menu">
+                                <li class="submenu_menu_item"><img class="social" src="./img/facebook@4X.png" alt="img"></li>
+                                <li class="submenu_menu_item"><img class="social" src="./img/twitter@4X.png" alt="img"></li>
+                                <li class="submenu_menu_item"><img class="social" src="./img/pinterest@4X.png" alt="img"></li>
+                                <li class="submenu_menu_item"><img class="social" src="./img/instagram@4X.png" alt="img"></li>
+                        </ul>
+                    </div>
+                    <p class="who_name">cristopher campbell</p>
+                    <p class="who_work">Branding/UX Design</p>
+                </li>
+                <li class="who_menu">
+                    <div class="img_conteiner">
+                        <img src="./img/Layer 18@4X.png" alt="img" class="who_img">
+                        <ul class="submenu_menu">
+                                <li class="submenu_menu_item"><img class="social" src="./img/facebook@4X.png" alt="img"></li>
+                                <li class="submenu_menu_item"><img class="social" src="./img/twitter@4X.png" alt="img"></li>
+                                <li class="submenu_menu_item"><img class="social" src="./img/pinterest@4X.png" alt="img"></li>
+                                <li class="submenu_menu_item"><img class="social" src="./img/instagram@4X.png" alt="img"></li>
+                        </ul>  
+                    </div>
+                    <p class="who_name">michael fertig</p>
+                    <p class="who_work">Developer</p>
+                </li>
+            </ul>
+        </section>
+    </main>
+    <footer class="footer">
+        <div class="footer_flex">
+        <p class="footer_info">&#169; MoGo free PSD template by <a href="#" class="laaqiq">Laaqiq</a></p>
+        <form class="input_but">
+            <input type="email" placeholder="Your email.." class="email">
+            <input type="submit" value="SUBSCRIBE" class="subscribe">
+        </form>
+        </div>
+    </footer>
     
 </body>
 </html>
